<resources>
    <string name="app_name">ShoppingList</string>
    <string name="any">   </string>
    <string name="food">Food</string>
    <string name="electronic">Electronic</string>
    <string name="book">Book</string>
    <string name="clothes">Clothes</string>
    <string name="action_settings">Settings</string>
    <string name="dialogAdd">ADD NEW ITEM</string>
    <string name="product_name">Product name</string>
    <string name="price">Price</string>
    <string name="details">Details</string>
    <string name="currency">USD</string>
    <string name="purchased">Purchased</string>
</resources>